# cobol-legacy-ledger

./: .dockerignore  .env.example  .gitattributes  .gitignore  BALANCE_PARSER_VALIDATION.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_BUILD_COMPLETE.md  DOCKER_VERIFICATION.md  Dockerfile  Dockerfile.cobol  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE2_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE2_PREREQUISITES.md  PHASE_1_STATUS.md  QUICKSTART.md  README.md  READY_FOR_PHASE2.md  SECURITY.md  SMOKE_TEST_OBSERVATION.md  SMOKE_TEST_SETUP.md  SUPPORT.md  done  echo  pyproject.toml  railway.toml  test_compile.sh  test_imports.py  test_settlement.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml
COBOL-BANKING/: KNOWN_ISSUES.md
COBOL-BANKING/payroll/: KNOWN_ISSUES.md  README.md
cobol/: KNOWN_ISSUES.md
cobol/bin.bak/: ACCOUNTS  FEES  INTEREST  RECONCILE  REPORTS  SMOKETEST  TRANSACT  VALIDATE
cobol/copybooks/: ACCTIO.cpy  ACCTREC.cpy  COMCODE.cpy  SIMREC.cpy  TRANSREC.cpy
cobol/src/: ACCOUNTS.cob  FEES.cob  INTEREST.cob  RECONCILE.cob  REPORTS.cob  SETTLE.cob  SIMULATE.cob  SMOKETEST.cob  TRANSACT.cob  VALIDATE.cob
console/: index.html
console/css/: analysis.css  chat.css  components.css  dashboard.css  layout.css  mainframe.css  polish.css  variables.css
console/data/: knowledge-base.json
console/js/: analysis.js  api-client.js  app.js  breadcrumbs.js  call-graph.js  chain-defense.js  chat.js  cobol-viewer.js  compare-viewer.js  dashboard.js  data-flow-view.js  event-bus.js  fun-facts.js  mainframe.js  network-graph.js  onboarding.js  paragraph-detail.js  utils.js
docs/: ARCHITECTURE.md  GLOSSARY.md  LEARNING_PATH.md  OVERHAUL_ROADMAP.md  POLISH_ROADMAP.md  PORTFOLIO_ASSESSMENT.md  SOCIAL_PREVIEW_SPEC.md  TEACHING_GUIDE.md
docs/archive/: OVERHAUL_HANDOFF.md
docs/handoff/: 00_README.md  01_MASTER_OVERVIEW.md  02_COBOL_AND_DATA.md  03_PYTHON_BACKEND.md  04_FRONTEND_AND_DEMO.md  COBOL_DOCKER_PHASE2.md  COBOL_STYLE_REFERENCE.md  COBOL_SUPPLEMENTS.md
docs/reports/: INSTALL_GNUCOBOL.md  PHASE1_BUILD_SUMMARY.md  PHASE1_DELIVERABLES.md  PHASE2_DELIVERABLES.md  PHASE2_README.md  PHASE_1_COMPLETE.md
docs/research/: COBOL_MAINFRAME_QUIRKS.md  COBOL_PRACTITIONER_INSIGHTS.md
logs/: BANK_A_INTERNAL.csv  BANK_B_INTERNAL.csv  BANK_C_INTERNAL.csv  BANK_D_INTERNAL.csv  BANK_E_INTERNAL.csv  SETTLEMENT.csv
memory/: constitution.md
python/: README.md  __init__.py  auth.py  bridge.py  cli.py  cross_verify.py  integrity.py  payroll_bridge.py  requirements.txt  settlement.py  simulator.py
python/api/: README.md  __init__.py  app.py  dependencies.py  models.py  routes_analysis.py  routes_banking.py  routes_chat.py  routes_codegen.py  routes_health.py  routes_mainframe.py  routes_payroll.py  (+1 more)
scripts/: README.md  build.sh  capture_screenshots.py  cobol-run.sh  cobol-test-suite.sh  cobol-test.sh  create_accounts_dat.py  demo.sh  export_knowledge_base.py  gen_employees.py  install_gnucobol.ps1  install_gnucobol.sh  prove.sh  run-simulation.sh  run_smoke_test.sh  seed.sh  seed_docker.py  setup.sh  validate_balance_parser.py
simulation/: explore_system.py  run_live_simulation.py  test_live_chat.py  test_user_flows.py
site/: blog.md  index.html  record-demo.py
(+80 files in other folders)
